[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pinocchio_ik"
version = "0.0.1"
description = "Pinocchio-based FK CBF and velocity IK. The pixi env is for running the Python-only (non-ROS) test/example scripts."
authors = [{ name = "Brian Lee", email = "brian@erl-brian.ucsd.edu" }]
license = { text = "Apache License 2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "scipy",
    "cvxpy",
    "osqp",
    "meshcat",
    "matplotlib",
    "urdf-parser-py",
    "pin",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
velocity_ik = "pinocchio_ik.velocity_ik:main"
distance_cbf = "pinocchio_ik.cbf_node:main"

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.pixi.workspace]
name = "pinocchio_ik"
version = "0.0.0"
description = "Pinocchio-based FK CBF and velocity IK. The pixi env is for running the Python-only (non-ROS) test/example scripts."
authors = ["Brian Lee <brian@erl-brian.ucsd.edu>"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.10.*"
numpy = "<2"
scipy = "*"
pinocchio = "*"
cvxpy = "*"
osqp = "*"
meshcat-python = "*"
matplotlib = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
urdf-parser-py = "*"

[tool.pixi.tasks]
test-cbf = { cmd = "python test/test_cbf.py", description = "Run the Python-only FK CBF demo against test/two_manipulator_arm.urdf" }
test-pointcloud-sdf = { cmd = "python test/test_pointcloud_sdf.py", description = "Visualize PointCloudSDF on a 2D slice and run the FK CBF using it" }
test-xarm6-cbf = { cmd = "python test/test_xarm6_cbf.py", description = "Run the FK CBF on the xArm6 with a spherical workspace obstacle" }
test-webgl = { cmd = "python test/test_webgl.py", description = "Generate a standalone WebGL diagnostic page to open in your browser" }
